# ede-todo

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.db
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.md
src/: args.rs  db.rs  error.rs  main.rs
