[package]
name = "ede-todo"
version = "0.1.0"
edition = "2021"
authors = ["DelgadoElias <eliaslautarodelgado@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cargo-tarpaulin = "0.32.2"
predicates = "3"
assert_cmd = "2"
